--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,11 @@ Version: 0.1.0
 Author: Luke McDougal
 Maintainer: Luke McDougal <luke.mcdougal@ou.edu>
 Description: This is a test package.
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
+Imports: 
+    dplyr, 
+    kableExtra,
+    stats
