--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,7 @@
 
 S3method(print,Rttest)
 export(myconstr)
+importFrom(dplyr,'%>%')
+importFrom(kableExtra,'kable')
+importFrom(kableExtra,'kable_styling')
+importFrom(stats,t.test)
