Made an R markdown

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(print,Rttest)
 export(myconstr)
+export(print.Rttest)
 importFrom(dplyr,'%>%')
 importFrom(kableExtra,'kable')
 importFrom(kableExtra,'kable_styling')
